# ef-marketing-agent-hack

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHAT_TOOLS_PLAN.md  CLAUDE.md  CONTRACTS.md  DEMO_CASES.md  FRONTEND_TASKS.md  MULTITENANT_PLAN.md  PROSPECT_ENRICHMENT_TASK.md  README.md  SURYA.md  credence_2.0.md  index.html  orgchart_tasks.docx  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
server/: .gitignore  .vercelignore  README.md  conftest.py  index.py  pyproject.toml  requirements.txt
server/credence/: __init__.py  admin.py  api.py  auth.py  backfill_v3.py  chat.py  config.py  db.py  enrich.py  models.py  score.py  score_runner.py  search.py  signals.py  strength.py  taxonomy.py
server/migrations/: 001_prospects_enriched.sql
server/scripts/: a1_clustering_smoke.py  a2_a3_a8_pipeline_smoke.py  a7_validation_smoke.py  apify_orphan_watcher.py  apify_recover_datasets.py  apply_migrations.py  backfill_persons_from_company_signals.py  bulk_press_co_mention_edges.py  cascade_orchestrator.py  categorize_press_signals.py  expand_paper_authors.py  fill_employment_years.py  orgchart_audit_zero_cluster_companies.py  orgchart_refresh_for_company.py  populate_past_employment.py  prototype_author_overlap_resolver.py  recover_apify_runs.py  resolve_target_slugs.py  run_apimaestro_enrichment.py  run_bulk_enrichment.py  run_untouched_enrichment.py  s3_e2e_verify.py  s3_pipeline_check.py  score_all.py  seed_company_meta.py
server/tests/: conftest.py  test_apify.py  test_apify_apimaestro.py  test_apify_live.py  test_apify_orphan_watcher.py  test_apify_posts.py  test_apollo.py  test_apollo_live.py  test_auth.py  test_backfill_classifications.py  test_backfill_persons_from_company_signals.py  test_backfill_v3.py  test_budget.py  test_bulk_apify_profile_lookup.py  test_bulk_career_overlap_signals.py  test_bulk_conference_talk_extraction.py  test_bulk_education_signals.py  test_bulk_press_co_mention_edges.py  test_bulk_press_co_mention_edges_script.py  test_bulk_scholar_ingest.py  test_bulk_standards_ingest.py  test_bulk_uspto_ingest.py  test_career_overlap_clustering.py  test_cascade_orchestrator.py  test_chat_tools.py  test_company_enrichment.py  test_company_site_press_prompt.py  (+48 more)
(+255 files in other folders)
