[project]
name = "credence-server"
version = "0.1.0"
description = "Credence backend — enrichment, scoring, chat proxy, graph search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure-function / single-module test, no external services",
    "integration: hits a live external service (USPTO PatentsView, Semantic Scholar, Supabase, etc.); skipped by default — run with `pytest -m integration`",
]
# Default test command excludes the integration tier so CI / local `pytest`
# don't fail when the network is unavailable (e.g., the sandbox J.4 + J.5
# were authored in had no DNS). Run live smoke tests explicitly with
# `pytest -m integration` when you have internet.
addopts = "-m 'not integration'"

